# terminal-rpg-cpp

./: .gitignore  CMakeLists.txt  README.md  build-release-unix.sh  build-release-windows.cmd  build-release-windows.ps1  chest.hpp  enemy.cpp  enemy.hpp  item.h  item.hpp  itemdatabase.cpp  itemdatabase.hpp  leveldatabase.cpp  leveldatabase.hpp  main.cpp  player.cpp  player.hpp
.github/workflows/: auto-format.yml  build-release-binaries.yml
src/: main.cpp
src/chest/: chest.cpp  chest.hpp
src/enemies/: enemy.cpp  enemy.hpp  enemydatabase.cpp  enemydatabase.hpp
src/items/: item.cpp  item.hpp  itemdatabase.cpp
src/levels/: leveldatabase.cpp
src/player/: player.cpp  player.hpp
tests/: test_chest.cpp  test_enemy.cpp  test_item.cpp  test_itemdatabase.cpp  test_leveldatabase.cpp  test_player.cpp
